# test-game-rust

./: Cargo.toml
docs/: game_concept.md
src/: main.rs
