[package]
name = "test-game-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
bevy = "0.15.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
rand_chacha = { version = "0.9.0", features = ["os_rng", "serde", "std"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
